<resources>
    <string name="app_name">Admin Api</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_admin">LoginAdmin</string>
    <string name="my_info">My Info</string>
    <string name="communicate">Communicate</string>
    <string name="track_your_point">Track Your Point</string>
    <string name="announcement">Announcement</string>
    <string name="driver_details">Driver Details</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="student_info">Student\'s Info</string>
    <string name="campus_coach">CAMPUS COACH</string>
    <string name="title_activity_admin_log">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email:</string>
    <string name="enter_your_credentials">Enter Your Credentials</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="number_of_attempts_left"></string>
    <string name="todo">TODO</string>
</resources>
