<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_TrackYourPoint"
            android:icon="@drawable/point_tracking"
            android:title="@string/track_your_point" />
        <item
            android:id="@+id/nav_Announcement"
            android:icon="@drawable/img_456677"
            android:title="@string/announcement" />
        <item
            android:id="@+id/nav_Studentinfo"
            android:icon="@drawable/studinfo2"
            android:title="@string/student_info" />
        <item
            android:id="@+id/nav_DriverDetails"
            android:icon="@drawable/bus_driver"
            android:title="@string/driver_details" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_Feedback"
                android:icon="@drawable/feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_AboutUs"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
